d800 - initial ev bringup

--- a/gps.conf
+++ b/gps.conf
@@ -1,15 +1,15 @@
 #Test
 #NTP_SERVER=time.gpsonextra.net
 #Asia
-# NTP_SERVER=asia.pool.ntp.org
+#NTP_SERVER=asia.pool.ntp.org
 #Europe
-NTP_SERVER=europe.pool.ntp.org
+#NTP_SERVER=europe.pool.ntp.org
 #North America
-# NTP_SERVER=north-america.pool.ntp.org
+NTP_SERVER=north-america.pool.ntp.org
 #Korea
 #NTP_SERVER=0.kr.pool.ntp.org
 #JP
-# NTP_SERVER=3.jp.pool.ntp.org
+#NTP_SERVER=3.jp.pool.ntp.org
 
 XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra2.bin
 XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra2.bin
