--- a/init.g2.rc
+++ b/init.g2.rc
@@ -434,13 +434,12 @@ service fuse_usb /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usb /storage/u
     class late_start
     disabled
 
-## Power profiles (CM QS tile)
-## restarting thermal-engine will kill the system :/
+# CM Performance Profiles
 
 # Powersave
 on property:sys.perf.profile=0
     start mpdecision
-    #start thermal-engine
+    start thermal-engine
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor conservative
@@ -449,7 +448,7 @@ on property:sys.perf.profile=0
 # Balanced
 on property:sys.perf.profile=1
     start mpdecision
-    #start thermal-engine
+    start thermal-engine
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor ondemand
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor ondemand
@@ -458,7 +457,7 @@ on property:sys.perf.profile=1
 # High performance
 on property:sys.perf.profile=2
     stop mpdecision
-    #stop thermal-engine
+    stop thermal-engine
     write /sys/devices/system/cpu/cpu0/online 1
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
