--- a/init.g2.rc
+++ b/init.g2.rc
@@ -149,6 +149,9 @@ on boot
 on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
 
+    # bluetooth
+    mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
+
     # Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
