--- a/init.g2.rc
+++ b/init.g2.rc
@@ -296,6 +296,7 @@ on charger
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
+    start rmt_storage
 
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
