--- a/init.g2.rc
+++ b/init.g2.rc
@@ -405,6 +405,7 @@ service p2p_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
+    oneshot
 
 service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
@@ -418,6 +419,7 @@ service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
+    oneshot
 
 service conn_init /system/bin/logwrapper /system/bin/hwaddrs
     class late_start
