--- a/init.g2.rc
+++ b/init.g2.rc
@@ -357,7 +357,7 @@ on property:ro.data.large_tcp_window_size=true
     # Adjust socket buffer to enlarge TCP receive window for high bandwidth (e.g. DO-RevB)
     write /proc/sys/net/ipv4/tcp_adv_win_scale 2
 
-service charger /sbin/healthd
+service charger /sbin/healthd -c
     class charger
     seclabel u:r:healthd:s0
 
