--- a/init.g2.rc
+++ b/init.g2.rc
@@ -125,8 +125,17 @@ on boot
 
 # Assign TCP buffer thresholds to be ceiling value of technology maximums
 # Increased technology maximums should be reflected here.
-    write /proc/sys/net/core/rmem_max  1220608
-    write /proc/sys/net/core/wmem_max  1220608
+    write /proc/sys/net/core/rmem_max  2097152
+    write /proc/sys/net/core/wmem_max  2097152
+    
+# Define TCP buffer sizes
+# ReadMin, ReadInitial, ReadMax, WriteMin, WriteInitial, WriteMax
+    setprop net.tcp.buffersize.default  4096,524228,1048576,4096,524228,1048576
+    setprop net.tcp.buffersize.wifi     4096,524228,1048576,4096,524228,1048576
+    setprop net.tcp.buffersize.lte      4096,524228,1048576,4096,524228,1048576
+    setprop net.tcp.buffersize.hsdpa    4096,524228,1048576,4096,524228,1048576
+    setprop net.tcp.buffersize.hspa     4096,524228,1048576,4096,524228,1048576
+    setprop net.tcp.buffersize.hsupa    4096,524228,1048576,4096,524228,1048576
 
 on boot
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
