--- a/init.g2.rc
+++ b/init.g2.rc
@@ -379,7 +379,7 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
     group camera system inet input
 
 service qseecomd /system/bin/qseecomd
-    class late_start
+    class core
     user root
     group root
 
