g2: Updated external storage configuration
vold now manages external storage in a much more dynamic fashion,
so we no longer need to define FUSE daemons or mount points.

Also remove deprecated storage_list.xml
https://source.android.com/devices/storage/config.html

Change-Id: I28b6bd7c882b5a15c972447211dfd1530fa37fe9

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -51,28 +51,9 @@ on init
     # Create directory for sensordaemon
     mkdir /sns/cal 0644 system system
 
-    # See storage config details at http://source.android.com/tech/storage/
-    mkdir /mnt/media_rw 0700 media_rw media_rw
-    mkdir /mnt/shell/emulated 0700 shell shell
-    mkdir /storage 0751 system sdcard_r
-    mkdir /storage/emulated 0555 root root
-
-    # USB storage
-    chmod 0701 /mnt/media_rw
-    mkdir /mnt/media_rw/usbdisk0 0700 media_rw media_rw
-    mkdir /storage/usbdisk0 0700 root root
-
-    export EXTERNAL_STORAGE /storage/emulated/legacy
-    export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
-    export EMULATED_STORAGE_TARGET /storage/emulated
-    export SECONDARY_STORAGE /storage/usbdisk0
-
     # Support legacy paths
-    symlink /storage/emulated/legacy /sdcard
-    symlink /storage/emulated/legacy /mnt/sdcard
-    symlink /storage/emulated/legacy /storage/sdcard0
-    symlink /mnt/shell/emulated/0 /storage/emulated/legacy
-    symlink /storage/usbdisk0 /storage/usb
+    symlink /sdcard /mnt/sdcard
+    symlink /sdcard /storage/sdcard0
 
 on fs
     mount_all ./fstab.g2
