--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -653,7 +653,7 @@ service qseecomd /system/bin/qseecomd
     user root
     group root
 
-service qcom-sh /system/bin/sh /init.qcom.sh
+service set_baseband /system/bin/sh /system/etc/set_baseband.sh
     class late_start
     user root
     oneshot
