g2: Set ro.bootloader on init.
Change-Id: Ifb710bd02f8af43da06ec6505bfa7432038c18a0

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -415,7 +415,7 @@ service sensors /system/bin/sensors.qcom
     user root
     group root
 
-service set_baseband /system/bin/sh /system/etc/set_baseband.sh
+service set_partitions /system/bin/sh /system/etc/set_partitions.sh
     class late_start
     user root
     oneshot
