--- a/rootdir/etc/init.g2.power.rc
+++ b/rootdir/etc/init.g2.power.rc
@@ -64,7 +64,13 @@ on enable-low-power
     write /sys/class/devfreq/qcom,cpubw.42/governor "cpubw_hwmon"
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor "msm-adreno-tz"
 
-    rm /data/system/default_values
+    # MP-Decision
+    write /data/system/default_values ""
+
+    # MM-OSAL
+    write /data/mmosal_logmask.cfg 0
+    chown root system /data/mmosal_logmask.cfg
+    chmod 664 /data/mmosal_logmask.cfg
 
 on charger
     write /sys/module/lpm_levels/enable_low_power/l2 2
