g2-common: Allow mpdecision /proc read access
Allow mpdecision to read /proc entries associated with other UIDs.

Bug: 23310674
Change-Id: I952d364172d779c015bb543b80afa983f7ffee5a
Signed-off-by: Ícaro Hoff <icarohoff@gmail.com>

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -348,7 +348,7 @@ service loc_launcher /system/bin/loc_launcher
 service mpdecision /system/bin/mpdecision --avg_comp
    class late_start
    user root
-   group root system
+   group system readproc
    disabled
 
 service netmgrd /system/bin/netmgrd
