g2: Shift RIL shim library to use shim hook
Change-Id: Iea4cf69c9e60c5e9b2cbfd5a36e503bb37f040ce

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -43,7 +43,8 @@ on early-init
 
 on init
     # Preload the BoringSSL wrapper
-    export LD_PRELOAD "/system/lib/libboringssl-compat.so:/system/lib/liblge.so"
+    export LD_PRELOAD "/system/lib/libboringssl-compat.so"
+    export LD_SHIM_LIBS /system/lib/libril.so|libril_shim.so
 
     mkdir /persist 0771 system system
     mkdir /factory 0775 system system
