g2: Restore persist-lg permissions
Change-Id: Ib814fe675baca302591f6ce9c211795772baf6c8

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -123,6 +123,9 @@ on post-fs-data
     chmod 0664 /data/system/sensors/settings
     chown system /data/system/sensors/settings
 
+    # Set permissions on persist
+    restorecon_recursive /persist-lg
+
     # Create /data/time folder for time-services
     mkdir /data/time/ 0700 system system
 
