g2: introduce charger_g2 for offmode charging
Change-Id: I76b440fc8e1a3bd4c20a7a67fffa3225a3866526

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -325,7 +325,7 @@ service audiod /system/bin/audiod
     user system
     group system
 
-service charger /sbin/healthd -c
+service charger /sbin/charger_g2
     class charger
     critical
     seclabel u:r:healthd:s0
