g2-common: Use GID "wakelock" to control access to kernel wakelock
Bug: 25864142
Change-Id: I97628282a23cb7fe0936c69f3a67a81c2afed60c

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -364,7 +364,7 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
 service qmuxd /system/bin/qmuxd
     class main
     user radio
-    group radio audio bluetooth gps qcom_diag
+    group radio audio bluetooth wakelock gps qcom_diag
 
 service qseecomd /system/bin/qseecomd
     class core
@@ -374,12 +374,12 @@ service qseecomd /system/bin/qseecomd
 service rmt_storage /system/bin/rmt_storage
     class core
     user root
-    group system
+    group system wakelock
 
 service sensors /system/bin/sensors.qcom
     class late_start
     user root
-    group root
+    group root wakelock
 
 service set_baseband /system/bin/sh /system/etc/set_baseband.sh
     class late_start
