Init: Fix set_baseband script.
Change-Id: I4fd84473d07243a15ddb2f0cd7516128579de41c

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -380,7 +380,7 @@ service sensors /system/bin/sensors.qcom
     user root
     group root
 
-service set_baseband /system/bin/sh /system/etc/set_baseband.sh
+service set_baseband /system/bin/sh /set_baseband.sh
     class late_start
     user root
     seclabel u:r:set_baseband:s0
