--- a/rootdir/etc/init.g2.power.rc
+++ b/rootdir/etc/init.g2.power.rc
@@ -1,4 +1,5 @@
 on early-init
+    write /sys/block/mmcblk0/queue/scheduler
     write /sys/block/mmcblk0/bdi/read_ahead_kb 512
 
     write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
@@ -105,3 +106,5 @@ on property:recovery.perf.mode=1
 on property:recovery.perf.mode=0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
 
+on property:dev.bootcomplete=1
+    setprop sys.io.scheduler "bfq"
