g2: init: Get rid of persist.sys.ssr.enable_debug
Fixes:
[   12.918468,1] init: cannot expand
'${persist.sys.ssr.enable_debug}' while writing to
'/sys/module/subsystem_restart/parameters/enable_debug'

This is the simpler of the two options (Define
persist.sys.ssr.enable_debug or replace it with 1/0) as
we do not use it anywhere else in the system. We can
always overwrite it if needed.

Change-Id: Ied81dc2487392ad6edd577ef88967639ad9e5dc8

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -144,7 +144,7 @@ on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
     # Allow subsystem (modem etc) debugging
-    write /sys/module/subsystem_restart/parameters/enable_debug ${persist.sys.ssr.enable_debug}
+    write /sys/module/subsystem_restart/parameters/enable_debug 0
     write /sys/kernel/boot_adsp/boot 1
 
     # disable lmk_fast_run
