--- a/rootdir/etc/init.g2.power.rc
+++ b/rootdir/etc/init.g2.power.rc
@@ -68,7 +68,7 @@ on enable-low-power
     write /sys/class/devfreq/qcom,cpubw.42/governor "cpubw_hwmon"
     write /sys/class/kgsl/kgsl-3d0/devfreq/governor "msm-adreno-tz"
 
-    rm /data/system/default_values
+    write /dev/cpuctl/cpu.notify_on_migrate 1
 
 on charger
     write /sys/module/lpm_levels/enable_low_power/l2 2
@@ -107,4 +107,6 @@ on property:recovery.perf.mode=0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
 
 on property:dev.bootcomplete=1
+    rm /data/system/perfd/default_values
     setprop sys.io.scheduler "bfq"
+    start mpdecision
