--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -397,7 +397,7 @@ service thermal-engine /system/bin/thermal-engine
     group root
 
 service time_daemon /system/bin/time_daemon
-    class late_start
+    class main
     user root
     group root
 
