--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -141,6 +141,8 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
 
 on early-boot
+    start time_daemon
+
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
     # Allow subsystem (modem etc) debugging
@@ -397,9 +399,11 @@ service thermal-engine /system/bin/thermal-engine
     group root
 
 service time_daemon /system/bin/time_daemon
-    class late_start
     user root
     group root
+    disabled
+    oneshot
+    seclabel u:r:platform_app:s0
 
 # WiFi
 service p2p_supplicant /system/bin/wpa_supplicant \
