--- a/nfc/libnfc-brcm.conf
+++ b/nfc/libnfc-brcm.conf
@@ -6,8 +6,11 @@
 #
 ###############################################################################
 # Application options
-APPL_TRACE_LEVEL=0xFF
-PROTOCOL_TRACE_LEVEL=0xFFFFFFFF
+#APPL_TRACE_LEVEL=0xFF
+APPL_TRACE_LEVEL=0x02
+#PROTOCOL_TRACE_LEVEL=0xFFFFFFFF
+PROTOCOL_TRACE_LEVEL=0x00000000
+
 
 ###############################################################################
 # performance measurement
