g2: Mount debugfs on early-init
This was previously removed in commit 1b54691
due to the fact that it was mounted in the global init.rc in Android 6.0.

In Android 7.0 however, this is no longer the case.
Hence, revive the mount.

Change-Id: I15b9571db4dd07a19b298a670f9ce6db1c4eeb63

--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -29,6 +29,9 @@ import init.g2.power.rc
 import init.g2.usb.rc
 
 on early-init
+    mount debugfs debugfs /sys/kernel/debug
+    chmod 0755 /sys/kernel/debug
+
     symlink /dev/diag_lge /dev/diag
 
     mkdir /sys 0771 system system
