--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -44,7 +44,7 @@ on early-init
     write /sys/class/leds/lcd-backlight/brightness 130
 
 on init
-    export LD_SHIM_LIBS /system/vendor/lib/libqomx_jpegenc.so|libboringssl-compat.so:/system/lib/libril.so|libril_shim.so
+    export LD_SHIM_LIBS /system/vendor/lib/libqomx_jpegenc.so|libboringssl-compat.so:/system/lib/libril.so|libril_shim.so|liblog_shim.so:/system/vendor/lib/libwvm.so|libshim_wvm.so"
 
     mkdir /persist 0771 system system
     mkdir /factory 0775 system system
