--- a/rootdir/etc/init.g2.rc
+++ b/rootdir/etc/init.g2.rc
@@ -330,7 +330,7 @@ service charger /sbin/healthd -c
 service conn_init /system/bin/hwaddrs
     class late_start
     user system
-    group system wifi
+    group system bluetooth
     oneshot
 
 on property:init.svc.conn_init=stopped
