--- a/rootdir/etc/ueventd.g2.rc
+++ b/rootdir/etc/ueventd.g2.rc
@@ -240,6 +240,6 @@
 
 /dev/lge_ddm_tty0         0660   system     system
 
-/dev/block/mmcblk0p13     0660   system     wifi
+/dev/block/mmcblk0p13     0660   system     bluetooth
 /dev/btlock               0660   bluetooth  net_bt_stack
 /dev/rfkill               0660   wifi       wifi
